public/css/ambi_custom.css
/* ... */
.popup-holder .calendar-week-popup-wrapper .model-body .calendar-input-area .tag-wrapper .people-wrapper {
    width: 343px !important;
    margin-right: 15px;
    height: 25px;
}

.popup-holder .calendar-week-popup-wrapper .model-body .calendar-input-area .tag-wrapper .people-wrapper.tagged .people-container{
    width: 100%;
    max-width: 343px !important;
    height: 25px;
}

.popup-holder .calendar-week-popup-wrapper .model-footer .input-items-outer-wrapper{
    z-index: 0;
}

.popup-holder .calendar-week-popup-wrapper .model-body .calendar-input-area .tag-wrapper, .calender-container .calender-body .col-sm-9 .calender-view .calender-input .tag-wrapper {
    overflow: visible;
}

.calender-container .calender-body .col-sm-9 .calender-view .input-menu .items-wrapper .input-items-wrapper li.btn-group .btn {
    z-index: 0;
}

.calender-container .calender-body .col-sm-9 .calender-view .calender-input .tag-wrapper .people-wrapper .people-container .people-input,
.popup-holder .calendar-week-popup-wrapper .model-body .calendar-input-area .tag-wrapper .people-wrapper .people-container .people-input {
    letter-spacing: 0.5px;
}

#react-autowhatever-1 {
    z-index: 1;
}

.create-group-popup .invite-people .react-autosuggest__container {
    position: relative;
}

.create-group-popup .invite-people #react-autowhatever-1 {
    top: 34px;
}

/* custom styles for ipad view */
@media (min-width: 768px) {
		.calender-container .mini-calender-box.calender-box .header span {
			padding-left: 0px;
    	padding-right: 0px;
		}
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li div.checkbox-area {
  display: block;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li div.checkbox-area.bg-success {
  padding: 10px;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label p span.people-list,
.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label p span.people-list span,
.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label p span {
		color: #7f7f7f !important;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label p span.selected-people,
.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label p span.selected-people span {
		color: #a6c649 !important;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label.disabled:before {
    color: #989ba0;
    background-color: #bcbfbf;
    border: 1px solid #989ba0;
}

.calender-container .calender-body .col-sm-9 .calender-view .to-do-list-area .to-do-list-area-content .to-do-list-area-content-list li label .event-description.accepted {
    color: #a6c649;
}

.calender-year-view .view-tile-area .month-tiles .month-tile {
  min-height: 233px;
}
/*.calender-year-view .view-tile-area .month-tiles .month-tile .mini-calendar > div.week > span.day {*/
  /*min-height: 37px;*/
/*}*/

/* Call center */
.call-center-header .actions-wrapper .crt-call{
  margin-right: 5px;
}

.popup-holder .active-call-container .active-user-block{
  height: 512px;
}

.popup-holder .active-call-container .participants{
    height: 100px;
    margin: 20px 0 0;
}

.callModelMinimized{
  position: fixed;
  bottom: 73px;
  width: 250px;
  background: #fff;
  box-shadow: 4px 1px 40px -12px #000;
  height: 35px;
  padding: 6px 10px 10px;
  border-radius: 5px 5px 0 0;
}

.callModelMinimized .opt-wrapper{
  float: right;
}

.callModelMinimized .opt-wrapper .fa{
  margin-right: 8px;
  cursor: pointer;
}

.callModelMinimized .opt-wrapper .fa:last-child{
  margin: 0;
}

.popup-holder .call-center-new-participant .user-block {
    padding: 12px 10px;
    position: relative;
}

.popup-holder .call-center-new-participant .img-holder,
.popup-holder .call-center-new-participant .user-details {
  float: left;
}

.popup-holder .call-center-new-participant .img-holder {
    width: 21px;
    height: 21px;
}

.popup-holder .call-center-new-participant .img-holder img{
    width: 100%;
    height: auto;
    border-radius: 4px;
}

.popup-holder .call-center-new-participant .user-details{
    margin-left: 12px;
}

.popup-holder .call-center-new-participant .user-details .user-name{
    margin: 7px 0 0px;
    font-size: 0.9em;
    color: #2d5164;
    text-transform: capitalize;
}

.popup-holder .call-center-new-participant .action{
    float: right;
    font-size: 0.857em;
    color: #2d5164;
    margin: 2px 0 0;
}

.popup-holder .call-center-new-participant .action .btn-add{
    padding: 1px 7px 3px 9px;
    border: none;
    border-radius: 100%;
    background-color: #FFFFFF;
    box-shadow: 0px 1px 5px -1px #000;
    outline: none;
}

.popup-holder .call-center-new-participant .action .btn-add .fa-plus{
    color: #61b3de;
    margin-top: 0;
    position: relative;
    top: auto;
    left: auto;
}

.call-center-inner-holder .no-data{
    padding: 10px;
    text-align: center;
    margin: 0;
    color: #101010;
    background: #fff;
}

/* Model overlay is overlaping */
body .modal-backdrop{
  display: none;
}

.share-popover-contained, .share-popover-contained .popup-holder, .share-folder-popover, .share-folder-popover .popover-content{
    border: transparent ;
    background: transparent;
}

.share-popover-contained .arrow {
    display: none;
}

.share-popover-contained.callpopup .arrow{
  top: 28px !important;
}

.share-popover-contained .popover-content{
    padding: 0;
}
/* ... */

